--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "devDependencies": {
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.4",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.6.1",
     "babel-preset-es2015": "^6.24.1",
     "clean-webpack-plugin": "^0.1.19",
@@ -33,6 +35,7 @@
     "webpack-merge": "^4.1.2"
   },
   "dependencies": {
+    "babel-runtime": "^6.26.0",
     "jquery": "^1.11.3"
   }
 }
