--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
   },
   "dependencies": {
     "babel-runtime": "^6.26.0",
-    "jquery": "^1.11.3"
+    "jquery": "^1.11.3",
+    "qiniu-js": "^2.4.0"
   }
 }
