--- a/package.json
+++ b/package.json
@@ -13,12 +13,17 @@
   "devDependencies": {
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.4",
+    "babel-plugin-transform-es3-property-literals": "^6.22.0",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.6.1",
     "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
     "clean-webpack-plugin": "^0.1.19",
     "css-loader": "^0.21.0",
+    "es3ify-loader": "^0.2.0",
+    "es5-shim": "^4.5.12",
+    "es6-promise": "^4.2.5",
     "extract-loader": "^2.0.1",
     "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^0.8.5",
